# orotitan-nexus

./: README.md  cac40_garp_screener.py  pyproject.toml  requirements.txt
configs/: cac40.yaml  cac40_base.yaml  sbf120.yaml
orotitan_nexus/: __init__.py  api.py  backtest.py  cli.py  cli_cac40_garp.py  cli_custom_garp.py  cli_garp_backtest.py  cli_garp_diagnostics.py  cli_nexus_playbook.py  cli_v2_robustness.py  compatibility.py  config.py  data_fetch.py  diagnostics.py  etf_scoring.py  execution.py  explain_v2.py  factors_v2.py  filters.py  garp_rules.py  geo.py  history.py  nexus_core_factors.py  nexus_core_pillars.py  nexus_core_scoring.py  normalization.py  orchestrator.py  playbook.py  portfolio_diversification.py  portfolio_metrics.py  prices.py  regimes_v2.py  reporting.py  robustness_v2.py  scoring.py  scoring_v2.py  universe.py  valuation.py
tests/: conftest.py  test_api.py  test_api_nexus_core.py  test_api_playbook.py  test_backtest_offline.py  test_backtest_v2.py  test_cli_cac40_garp.py  test_cli_custom_garp.py  test_cli_end_to_end.py  test_cli_explain_v2.py  test_cli_garp_backtest.py  test_cli_garp_diagnostics.py  test_cli_nexus_playbook.py  test_cli_v2_robustness.py  test_compatibility.py  test_config_v2.py  test_config_v2_robustness.py  test_config_validation.py  test_diagnostics.py  test_etf_scoring.py  test_execution.py  test_explain_v2.py  test_garp_rules.py  test_geo.py  test_history.py  test_nexus_core_pillars.py  test_nexus_core_scoring.py  test_normalization.py  test_orchestrator.py  test_playbook_config.py  test_playbook_execution_hints.py  (+9 more)
